--- a/src/app/recipe-book/recipe-book.component.html
+++ b/src/app/recipe-book/recipe-book.component.html
@@ -1,3 +1,3 @@
-<p>recipe-book works!</p>
+<p>recipe-book works!dfe </p>
 <app-recipe-detail></app-recipe-detail>
 <app-recipe-list></app-recipe-list>
