--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -2,6 +2,17 @@
   <div class="col-xs-10">
     <app-shopping-edit></app-shopping-edit>
     <hr />
-    <p>My List</p>
+    <div>
+      <ul class="list-group">
+        <a
+          herf="#"
+          class="list-group-item"
+          *ngFor="let ingredient of ingredients"
+        >
+          <span class="badge">{{ ingredient.amount }}</span>
+          <strong>{{ ingredient.name }}</strong>
+        </a>
+      </ul>
+    </div>
   </div>
 </div>
