--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <app-header></app-header>
-
-<div>
-  <h1>I am working</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <app-recipe-book></app-recipe-book>
+      <app-shopping-list></app-shopping-list>
+    </div>
+  </div>
 </div>
-
-<app-recipe-book></app-recipe-book>
-<app-shopping-list></app-shopping-list>
