--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -1,12 +1,17 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" class="img-responsive" alt="" />
+    <img
+      [src]="recipeDetail.imagePath"
+      class="img-responsive"
+      alt="{{ recipeDetail.name }}"
+      style="max-height: 300px"
+    />
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1>{{ recipeDetail.name }}</h1>
   </div>
 </div>
 
@@ -33,7 +38,7 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <p>Recipe Description</p>
+    <p>{{ recipeDetail.description }}</p>
   </div>
 </div>
 
