--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,7 +4,13 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" name="name" />
+          <input
+            type="text"
+            id="name"
+            class="form-control"
+            name="name"
+            #NameInput
+          />
         </div>
 
         <div class="row">
@@ -15,6 +21,7 @@
               id="amount"
               class="form-control"
               name="amount"
+              #AmountInput
             />
           </div>
         </div>
@@ -22,7 +29,12 @@
 
       <div class="row">
         <div class="col-xs-12">
-          <button type="button" class="btn btn-success" type="submit">
+          <button
+            type="button"
+            class="btn btn-success"
+            type="submit"
+            (click)="onAddItem()"
+          >
             Add
           </button>
           <button type="button" class="btn btn-danger" type="button">
